--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,117 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+    background-color: #cccccc;
+}
+
+header {
+    padding: 1rem 0 0 0;
+    background-color: #120323;
+    color: #97bf04;
+    text-align: center;
+}
+
+nav {
+    background-color: #d9043d;
+    margin: 1rem 0 0 0;
+    padding: 0.5rem;
+
+}
+
+nav li {
+    list-style-type: none;
+    display: inline;
+}
+
+nav li a {
+    text-decoration: none;
+    color: white;
+    padding: 1rem;
+}
+
+main img {
+    width: 100%;
+    height: auto;
+    max-width: 650px;
+    border-bottom: 10px solid #97bf04;
+    margin-bottom: 0.5rem;
+}
+
+figure {
+    background-color: white;
+    padding: 1.5rem;
+    margin: 2rem;
+}
+
+main h2 {
+    text-align: center;
+    margin: 1rem 0rem;
+}
+
+figcaption p {
+    margin-top: 0.6rem;
+}
+
+footer {
+    background-color: #d9043d;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+}
+
+@media screen and (max-width: 768px){
+    nav {
+        max-width: 95%;
+        margin: auto;
+        background-color: transparent
+    }
+
+    nav li a {
+        background-color: #d9043d;
+        padding: 1rem;
+        display: block;
+        margin: 1rem auto;
+        border: 2px solid #97bf04;
+    }
+
+    figure {
+        margin: 0.5rem;
+    }
+
+    #gallery-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        max-width: 90%;
+        margin: auto;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 999px){
+    #gallery-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    figure:last-of-type {
+        grid-column: span 2;
+        text-align: center;
+    }
+    figcaption h3, p {
+        text-align: left;
+    }
+}
+
+@media screen and (min-width: 1000px){
+    #gallery-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    figure:last-of-type {
+        grid-column: span 2;
+        text-align: center;
+    }
+    figcaption h3, p {
+        text-align: left;
+    }
+}
